# mcp-skill-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: HOW_TO_CREATE_SKILLS.md  TOOL_DESIGN_FOR_LLMS.md
examples/hello_world/: SKILL.md  hello.py
src/mcp_skill_server/: __init__.py  cli.py  executor.py  loader.py  models.py  server.py
src/mcp_skill_server/plugins/: __init__.py  base.py  formatters.py  gcs.py  local.py
tests/: test_cli.py  test_loader.py  test_security.py  test_server.py
