[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-skill-server"
version = "0.1.0"
description = "MCP server for local skill development and testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Janine Cheng" },
]
keywords = ["mcp", "skills", "llm", "agents", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
gcs = [
    "google-cloud-storage>=2.0.0",
]

[project.scripts]
mcp-skill-server = "mcp_skill_server.server:run_server"

[project.urls]
Homepage = "https://github.com/guideline-data/mcp-skill-server"
Repository = "https://github.com/guideline-data/mcp-skill-server"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_skill_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
